<resources>
    <string name="app_name">NOticket</string>
    <string name="string_h_picker">h</string>
    <string name="string_trait_picker">-</string>
    <string name="string_annuler">ANNULER</string>
    <string name="string_OK">OK</string>
    <string name="text_bout_heure1" translatable="false">7h00 à 18h00</string>
    <string name="text_bout_heure2" translatable="false">18h - 21h</string>
    <string name="text_bout_heure3">15h30 - 16h30</string>
    <string name="text_bout_jour1">LUN À VEN</string>
    <string name="text_bout_jour2">VEN</string>
    <string name="text_bout_jour3">SAM ET DIM</string>
    <string name="text_bout_mois1">SEPT À JUIN</string>
    <string name="string_a_mois">AU</string>
    <string name="text_seek_heure"># ligne d\'heure:</string>
    <string name="text_seek_jour"># ligne de jour:</string>
    <string name="text_seek_mois"># ligne de mois:</string>
    <string name="desc_panc_ajouter">cliquer pour ajouter une pancarte</string>
    <string name="desc_panc">Cliquer pour modifier ce panneau</string>
    <string name="alerte_max_pancarte">Vous avez atteint le maximum de 5 pancartes</string>
    <string name="title_activity_geolocalisation">Map</string>
    <string name="text_bout_ajout_heure">Ajouter une heure</string>
    <string name="text_bout_ajout_jour">Ajouter des jours</string>
    <string name="text_bout_ajout_mois">Ajouter des mois</string>
    <string name="desc_bout_delete">Effacer</string>
    <string name="desc_bout_fleche_g">changer l\'image de la fleche</string>
    <string name="desc_bout_fleche_d">changer l\'image de la fleche</string>
    <string name="desc_bout_change_image">changer l\'image de la pancarte</string>
    <string name="desc_image_pancarte">l\'image de la pancarte</string>
    <string name="desc_fleche">image de la fleche</string>
    <string name="text_heure_frag">Entrer l\'heure</string>
    <string name="text_jour_frag">Entrer le/les jours</string>
    <string name="text_mois_frag">Entrer les dates</string>
    <string name="text_bout_supprimer">SUPPRIMER</string>
    <string name="text_supprimer_fav">Supprimer \n ce <favori></favori></string>
    <string name="text_pop_fav">Voulez-vous importer\nce favori ?</string>
    <string name="message_reset">Voulez-vous effacer toutes les pancartes?</string>

    <string name="title_activity_fullscreen_debut">FullscreenDebutActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="avertissement">Avertissement</string>
    <string name="tutoriel">Tutoriel</string>
    <string name="desactivation_tutoriel">Désactivation des tutoriels</string>
    <string name="text_tutoriel_debut">TOUCHER POUR CONTINUER</string>
    <string name="desc_tutoriel_debut">tutoriel du début</string>
    <string name="tirte_favorie">Favories</string>
    <string name="text_alarme">Minutes avant de devoir déplacer votre voiture</string>
    <string name="text_alarme_actif">Activation de l\'alarme</string>
    <string name="texteAvertissement"> NOticket ne fait qu\’analyser les pancartes pour vous. Vous devez vous assurer de ne pas bloquer d\’intersections, de traverses piétonnières,
                                       de bornes fontaines, d\’entrées de stationnement ainsi que de ne pas interférer avec une zone de construction ou une intervention
                                       des services d\’urgence en cours. NOticket ne considère pas les vignettes ainsi que les stationnements
                                       permis pour une durée limitée. \n\nLes conclusions tirées par l\’application ne sont valables que pour les 24 prochaines heures.</string>
    <string name="Non">Non</string>
    <string name="Oui">Oui</string>
    <string name="messagePoubelle">Voulez-vous vraiment effacer votre alarme et votre géolocalisation?</string>
    <string name="choisirVoiture">Appuyez sur la position correspondant à votre voiture</string>
    <string name="messageAvertissement">Etes-vous dans un sens unique?</string>
    <string name="string_alarm">Alarme</string>
    <string name="string_retour">Retour</string>
    <string name="tutorielPancarte">Désactiver le tutoriel de création de pancarte</string>
    <string name="tutorielDebut">Désactiver le tutoriel d\'introduction</string>
    <string name="text_validation_heure">Les heures de début et de fin ne peuvent être les mêmes</string>
    <string name="text_validation_jour">Les jours de début et de fin ne peuvent être les mêmes</string>
    <string name="text_validation_mois">Les mois de début et de fin ne peuvent être les mêmes</string>
</resources>
