<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal|center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:gravity="center_vertical"
        android:text="@string/text_pop_fav"
        android:textAlignment="center"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boutFavSup"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_orange_dark"
            android:text="@string/text_bout_supprimer"
            android:textSize="14sp" />

        <Button
            android:id="@+id/boutFavAnnuler"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/string_annuler"
            android:textSize="14sp" />

        <Button
            android:id="@+id/boutFavOk"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/string_OK"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>