<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titreAvertissement"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/messagePoubelle"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/boutonNon"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/titreAvertissement"
        android:layout_below="@+id/titreAvertissement"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/Non" />

    <Button
        android:id="@+id/boutonOui"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/titreAvertissement"
        android:layout_below="@+id/titreAvertissement"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/Oui" />
</RelativeLayout>